--- a/.gitee/ISSUE_TEMPLATE/bug.yml
+++ b/.gitee/ISSUE_TEMPLATE/bug.yml
@@ -2,13 +2,14 @@ name: ✋ 问题反馈
 description: 使用 bootstrap-admin 过程中遇到的 Bug、异常或其他困惑。
 title: ""
 body:
-  - type: markdown
+  - type: checkboxes
     attributes:
-      value: |
-        **注意**：在反馈问题之前，请确保:
-        <br><br>
-        - 已查看官方使用文档：**https://www.bootstrap-admin.top/docs** ，但没有找到相关解决方案。
-        - 已在 **Issues** 中搜索过类似的问题，但没有找到相关解决方案。
+      label: 先决条件
+      options:
+        - label: 我确认已查看官方使用文档：**https://www.bootstrap-admin.top/docs** ，但没有找到相关解决方案。
+          required: true
+        - label: 我确认已在 **Issues** 中搜索过类似的问题，但没有找到相关解决方案。
+          required: true
   - type: input
     attributes:
       label: 版本号
@@ -18,7 +19,7 @@ body:
   - type: input
     attributes:
       label: 浏览器
-      placeholder: 如：Chrome 115.0.5735.91（正式版本） （64 位）
+      placeholder: 如：Chrome 116.0.5845.188（正式版本） （64 位）
     validations:
       required: true
   - type: dropdown
@@ -37,18 +38,6 @@ body:
       placeholder: 请提供详细的问题描述和操作步骤等信息，以便我们也能够更轻松地将问题复现。
     validations:
       required: true
-  - type: textarea
-    attributes:
-      label: 业务代码
-      description: 直接粘贴问题对应的 `HTML,CSS,JavaScript` 等代码到下面的文本框，无需书写 `Markdown`
-      placeholder: 请提供与该问题对应的业务代码片段，以便我们更好地排查问题。
-      render: auto
-    validations:
-      required: true
-  - type: textarea
-    attributes:
-      label: 截图补充
-      placeholder: 如上述仍然无法准确地表述问题，可提供必要的截图（可直接粘贴上传）
   - type: input
     attributes:
       label: 演示地址
